--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,14 @@
 name: dependent jobs
 on: workflow_dispatch
 jobs:
+  review:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Review the Code
+        run: echo "review"
   build:
     runs-on: ubuntu-latest
+    needs: review
     steps:
       - name: Checkout the Code
         run: echo "checkout"
@@ -10,8 +16,7 @@ jobs:
         run: echo "build"
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build,review]
     steps:
       - name: Deploy the Build
         run: echo "deploy"
-    
