--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,17 @@
-name: dependent jobs
-on: 
- push: 
-  branches: [main]
- pull_request:
-  branches:
-   - main
- workflow_dispatch:
+name: Conditional workflow 
+on: workflow_dispatch
 jobs:
-  review:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Review the Code
-        run: echo "review"
-  build:
-    runs-on: ubuntu-latest
-    needs: review
-    steps:
-      - name: Checkout the Code
-        run: echo "checkout"
-      - name: Build the Code
-        run: echo "build"
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build,review]
-    steps:
-      - name: Deploy the Build
-        run: echo "deploy"
+ job1:
+  runs-on: ubuntu-latest
+  steps:
+   - name: generate a random number 
+     id: generator
+     run: |
+       num=$RANDOM % 2
+       echo "done"
+   - name: conditions 1
+     if: steps.generator.outputs.num == 0
+     run: echo zero
+   - name: conditions 2
+     if: steps.generator.outputs.num == 1
+     run: echo one
