--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
      id: generator
      run: |
        echo "num=$RANDOM % 2"
-       echo "num"
+       echo $RANDOM
    - name: conditions 1
      if: steps.generator.outputs.num == 0
      run: echo zero
